; ModuleID = '/home/carl/AnghaBench/openssl/crypto/engine/extr_eng_table.c_engine_table_unregister.c'
source_filename = "/home/carl/AnghaBench/openssl/crypto/engine/extr_eng_table.c_engine_table_unregister.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i32 }

@global_engine_lock = common dso_local global i32 0, align 4
@int_unregister_cb = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @engine_table_unregister(%struct.TYPE_4__** %0, i32* %1) #0 {
  %3 = alloca %struct.TYPE_4__**, align 8
  %4 = alloca i32*, align 8
  store %struct.TYPE_4__** %0, %struct.TYPE_4__*** %3, align 8
  store i32* %1, i32** %4, align 8
  %5 = load i32, i32* @global_engine_lock, align 4
  %6 = call i32 @CRYPTO_THREAD_write_lock(i32 %5)
  %7 = load %struct.TYPE_4__**, %struct.TYPE_4__*** %3, align 8
  %8 = call i64 @int_table_check(%struct.TYPE_4__** %7, i32 0)
  %9 = icmp ne i64 %8, 0
  br i1 %9, label %10, label %17

10:                                               ; preds = %2
  %11 = load %struct.TYPE_4__**, %struct.TYPE_4__*** %3, align 8
  %12 = load %struct.TYPE_4__*, %struct.TYPE_4__** %11, align 8
  %13 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %12, i32 0, i32 0
  %14 = load i32, i32* @int_unregister_cb, align 4
  %15 = load i32*, i32** %4, align 8
  %16 = call i32 @lh_ENGINE_PILE_doall_ENGINE(i32* %13, i32 %14, i32* %15)
  br label %17

17:                                               ; preds = %10, %2
  %18 = load i32, i32* @global_engine_lock, align 4
  %19 = call i32 @CRYPTO_THREAD_unlock(i32 %18)
  ret void
}

declare dso_local i32 @CRYPTO_THREAD_write_lock(i32) #1

declare dso_local i64 @int_table_check(%struct.TYPE_4__**, i32) #1

declare dso_local i32 @lh_ENGINE_PILE_doall_ENGINE(i32*, i32, i32*) #1

declare dso_local i32 @CRYPTO_THREAD_unlock(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
